--- a/templates/iframe.html
+++ b/templates/iframe.html
@@ -3,7 +3,7 @@
         <div id="polly_help_window_wrapper">
             <div style="width: {{polly.options.helpcenter.width}}px">
                 <span class="polly_close" style="background-color: {{polly.options.helpcenter.closeButtonBackgroundColor}}; color: {{polly.options.helpcenter.closeButtonForegroundColor}}">X</span>
-        		<iframe sandbox="allow-same-origin allow-scripts" id="polly_help_iframe" src="http://188.166.0.207/help/{{polly.options.publicationId}}" frameborder="0" height="{{polly.options.helpcenter.height}}" width="{{polly.options.helpcenter.width}}"></iframe>
+        		<iframe sandbox="allow-same-origin allow-scripts allow-popups" id="polly_help_iframe" src="http://188.166.0.207/help/{{polly.options.publicationId}}" frameborder="0" height="{{polly.options.helpcenter.height}}" width="{{polly.options.helpcenter.width}}"></iframe>
             </div>
         </div>
     {{/if}}
