--- a/templates/polly.html
+++ b/templates/polly.html
@@ -1,3 +1,3 @@
 <template name="pollyHelpLink">
-    <a href="javascript:void(0)" id="pollyHelpLink">Help</a>
+   <button id="pollyHelpLink">Help</button>
 </template>
