changed to use dynamic polly js file loading

--- a/templates/polly.html
+++ b/templates/polly.html
@@ -1,3 +1,3 @@
 <template name="pollyHelpLink">
-   <button id="pollyHelpLink">Help</button>
+   <button class="showPollyHelp">Help</button>
 </template>
